# rustyriver

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  OPEN_QUESTIONS.md  PROGRESS.md  README.md  litestream-rust-fork-plan.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: coverage.md
docs/porting-briefs/: T15.md  T5.md  T6.md  T7.md  T8.md  T9.md
examples/: embed.rs
reference/: VENDOR.md  ltx-format.md
rustyriver-seed/t0/: README.md  rust-toolchain.toml
rustyriver-seed/t0/.github/workflows/: ci.yml
scripts/: capture-golden.sh  db_equal.sh  guards.sh
src/: db.rs  error.rs  leaser.rs  lib.rs  ltx.rs  replica.rs  replica_url.rs  store.rs  wal.rs
src/client/: file.rs  mod.rs  object_store.rs
tests/: conformance.rs  differential_xtool.rs  faults_inject.rs  fuzz_parsers.rs  integration_file.rs  integration_minio.rs  integration_resilience.rs  litestream_helpers.rs  property_roundtrip.rs
tests/fixtures/golden/: .gitkeep  MANIFEST.md  sample.wal
tests/fixtures/golden/replica/ltx/0/: 0000000000000001-0000000000000001.ltx  0000000000000002-0000000000000002.ltx  0000000000000003-0000000000000003.ltx  0000000000000004-0000000000000004.ltx  0000000000000005-0000000000000005.ltx  0000000000000006-0000000000000006.ltx
