[package]
name = "rustyriver"
version = "0.0.0"
edition = "2021"
# MSRV pinned for CI determinism (PLAN.md D-10). Keep in sync with rust-toolchain.toml.
rust-version = "1.84"
license = "Apache-2.0"
description = "Embeddable streaming replication for SQLite to object storage (a Rust reimplementation of Litestream v0.5)."
repository = "https://github.com/OWNER/rustyriver"
readme = "README.md"
keywords = ["sqlite", "replication", "litestream", "backup", "ha"]
categories = ["database"]

# Default client set per PLAN.md D-7 (S3/R2 + file). File works with no feature.
# Dropped clients are re-addable here later (PLAN.md §2).
[features]
default = ["s3"]
s3 = ["object_store/aws"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]

[dependencies]
# Async runtime (D-9).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
# SQLite via bundled lib — no system dep, fixed version (D-4).
rusqlite = { version = "0.32", features = ["bundled"] }     # verify pin at seed
# Object I/O — file store is built-in; cloud backends gated by features (D-5).
object_store = { version = "0.11", default-features = false } # verify pin at seed
bytes = "1"
thiserror = "2"                                              # verify pin at seed
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
# Lease object + config are JSON (PLAN.md §1 fencing).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: WAL uses SQLite's custom checksum (no crate); LTX uses a CRC the T2 spike
# pins. Add the chosen checksum crate in T1/T2 and log it in OPEN_QUESTIONS.md
# (AGENTS.md rule 7) — intentionally not pre-added here.

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
proptest = "1"
sha2 = "0.10"   # content hashing for the db_equal oracle (PLAN.md §6.1)
hex = "0.4"
