[package]
name = "rustyriver"
version = "0.1.0"
edition = "2021"
# MSRV pinned for CI determinism (PLAN.md D-10). Keep in sync with rust-toolchain.toml.
rust-version = "1.90"
license = "Apache-2.0"
description = "Embeddable streaming replication for SQLite to object storage (a Rust reimplementation of Litestream v0.5)."
repository = "https://github.com/mikenomitch/rustyriver"
readme = "README.md"
keywords = ["sqlite", "replication", "litestream", "backup", "ha"]
categories = ["database"]
# Published package = the library + its docs. Excludes the vendored upstream
# (reference/, 5.7M), golden fixtures, and the project-management docs.
include = [
    "/src/**",
    "/examples/embed.rs",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[package.metadata.docs.rs]
all-features = true

# Explicit workspace root: this crate lives in a git worktree nested under the
# parent repo, which carries its own stray Cargo.toml. Declaring [workspace]
# here stops cargo from walking up and adopting that ancestor manifest.
[workspace]

# Default client set per PLAN.md D-7 (S3/R2 + file). File works with no feature.
# Dropped clients are re-addable here later (PLAN.md §2).
[features]
default = ["s3"]
# `s3` also enables `reqwest` so the optional HeartbeatClient (T15) can issue its
# liveness GET. `reqwest` is already a transitive dependency of `object_store/aws`
# with the SAME feature set declared below, so enabling it here adds no new crate
# to the build graph — it only makes the existing dependency callable from this
# crate. Logged in OPEN_QUESTIONS.md (AGENTS.md rule 7).
s3 = ["object_store/aws", "dep:reqwest"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]

[dependencies]
# Async runtime (D-9).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
# SQLite via bundled lib — no system dep, fixed version (D-4).
rusqlite = { version = "0.32", features = ["bundled"] }     # verify pin at seed
# Object I/O — file store is built-in; cloud backends gated by features (D-5).
object_store = { version = "0.11", default-features = false } # verify pin at seed
bytes = "1"
thiserror = "2"                                              # verify pin at seed
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
# Lease object + config are JSON (PLAN.md §1 fencing).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional HTTP client for the T15 HeartbeatClient liveness ping. Optional and
# gated behind the `s3` feature; feature set matches object_store/aws's own
# reqwest dependency exactly so it unifies with the already-compiled copy (no new
# crate in the graph). Logged in OPEN_QUESTIONS.md (AGENTS.md rule 7).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2"], optional = true }
# LTX page blocks are LZ4-frame compressed (ltx@v0.5.1 encoder.go uses
# pierrec/lz4 v4). lz4_flex is pure-Rust (no CGo) → fits the single-static-binary
# goal (D-4 rationale). Added in T2; logged in OPEN_QUESTIONS.md (AGENTS.md rule 7).
lz4_flex = { version = "0.11", features = ["frame"] }

# NOTE: WAL uses SQLite's custom checksum (no crate); LTX uses a CRC the T2 spike
# pins. Add the chosen checksum crate in T1/T2 and log it in OPEN_QUESTIONS.md
# (AGENTS.md rule 7) — intentionally not pre-added here.

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
proptest = "1"
sha2 = "0.10"   # content hashing for the db_equal oracle (PLAN.md §6.1)
hex = "0.4"
